# Planner

./: .gitignore  CMakeLists.txt  README.md
src/: Planner.vala
src/Data/: Task.vala  TaskController.vala  TaskFile.vala  TaskUtils.vala
src/Style/: stylesheet.css
src/UI/: AboutDialog.vala  DailyTask.vala  DailyView.vala  MainWindow.vala  OverviewTask.vala  OverviewView.vala  PlaceholderWidget.vala  TaskDialog.vala
